--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -7,4 +7,25 @@ body {
 body,
 html {
   height: 100%;
+  width: 100%;
+}
+
+.info.legend {
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.65);
+}
+
+.info.legend i {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-right: 8px;
+}
+
+.info.legend:after {
+  content: "";
+  display: table;
+  clear: both;
 }
